--- a/client/index.html
+++ b/client/index.html
@@ -106,12 +106,6 @@
         <div id="content" draggable="false">
             <div id="bg" draggable="false"></div>
             <canvas id="bonzicanvas" style="width: 100%; height: 100%; z-index: -20; left: 0; top: 0; position: absolute;"></canvas>
-            <div id="chatbar_cont">
-                <div id="talkcard" style="display: none;">Debug text. Report to kings and staff.</div>
-                <div id="send_button"><span>send</span></div>
-                <input id="chatbar" placeholder="Enter a message">
-                <div id="tile"></div>
-            </div>
             <div id="agent_content">
             </div>
             <div id="room_info">
@@ -142,7 +136,13 @@
             <div id="log_cont" style="display:none;">
                 <p id="log_title">BonziLOG™<button class="log_close" id="log_close"></button></p>
                 <div id="log_body">
-                    <p>Welcome to BonziWORLD Avalon!</p>
+                    <div id="chatbar_cont">
+                <div id="talkcard" style="display: none;">Debug text. Report to kings and staff.</div>
+                <div id="send_button"><span>send</span></div>
+                <input id="chatbar" placeholder="Enter a message">
+                <div id="tile"></div>
+            </div>
+                    <p>Welcome to BonziDROIDWORLD!</p>
                 </div>
             </div>
             <marquee scrollamount="20" style="visibility: none;" id="banner">We are experiencing issues right now...</marquee>
