--- a/client/index.html
+++ b/client/index.html
@@ -119,8 +119,7 @@
 
 
             <!--Message Logger-->
-            <div id="logshow" class="icon">
-              <img src="./img/assets/log_button.webp">
+            <div id="topbarmobile" class="icon">
               Message Log
             </div>
             <br>
