--- a/client/index.html
+++ b/client/index.html
@@ -119,7 +119,7 @@
 
 
             <!--Message Logger-->
-            <div id="topbarmobile" class="icon">
+            <div id="meslog" class="topbarmobile">
               Message Log
             </div>
             <br>
