--- a/client/index.html
+++ b/client/index.html
@@ -125,12 +125,12 @@
             <br>
             <div id="settingsUi" class="icon">
                 <img src="./img/assets/settings.ico">
-                Settings
+                <span style="font-weight:normal;background: #000000ad;border-radius: 5px;padding: 3 7 3 7;text-align: center;font-size: 14px;">Settings</span>
             </div>
             <br>
             <div id="appletsUi" class="icon">
                 <img src="./img/assets/applets.png">
-                Applets
+                <span style="font-weight:normal;background: #000000ad;border-radius: 5px;padding: 3 7 3 7;text-align: center;font-size: 14px;">Apps</span>
             </div>
             <div id="log_cont" style="display:none;">
                 <p id="log_title">BonziLOG™<button class="log_close" id="log_close"></button></p>
