--- a/client/index.html
+++ b/client/index.html
@@ -150,11 +150,11 @@
         <!--This includes ALL error types-->
         <div id="error_page" style="display: none;">
             <div class="error_message" id="error_disconnect" style="display:none;">
-                <img src="./img/error_disconnect.png"><br>
-                <h1>BonziWORLD.html has encountered an error and needs to close.</h1>
-                There was an error and you got disconnected from the server. Chances are, your internet just died out for a brief moment or your device went to sleep. Otherwise the server just screwed up.<br><br>
-                You will automatically reconnect. If that doesn't work try to Reload<br><br>
-                <a href="/">Reload</a><br><br>
+                <font style="font-size: 25px;">Disconnected</font>
+                <br>
+                <hr>You got disconnected. Maybe because of the server or your Wi-Fi.
+                <br>
+                <a style="color: white;text-decoration: none;" href="/">Try and reload the page.</a><br><br>
                 Room ID - <span id="error_room">NONE</span>
             </div>
             <div class="error_message" id="error_restart" style="display:none;">
