--- a/client/index.html
+++ b/client/index.html
@@ -152,7 +152,7 @@
             <div class="error_message" id="error_disconnect" style="display:none;">
                 <font style="font-size: 25px;">Disconnected</font>
                 <br>
-                <hr>You got disconnected. Maybe because of the server or your Wi-Fi.
+                <hr style="height:2px;border-width:0;background:linear-gradient(90deg, transparent, white, transparent);">You got disconnected. Maybe because of the server or your Wi-Fi.
                 <br>
                 <a style="color: white;text-decoration: none;" href="/">Try and reload the page.</a><br><br>
                 Room ID - <span id="error_room">NONE</span>
