--- a/client/index.html
+++ b/client/index.html
@@ -166,10 +166,11 @@
                 Room ID - <span id="error_room">NONE</span>
             </div>
             <div class="error_message" id="error_kick" style="display:none;">
-                <img src="./img/error_ban.png"><br>
-                <h1>You have been kicked.</h1>
-                You may have been kicked by a moderator/admin or an owner, or if it was a private room, the room owner.<br><br>
-                <a href="/">Reload</a><br><br>
+                <font style="font-size: 25px;">You got kicked.</font>
+                <br>
+                <hr style="height:2px;border-width:0;background:linear-gradient(90deg, transparent, white, transparent);">You got kicked by some admins/moderators or the owner.
+                <br>
+                <a style="color: white;text-decoration: none;" href="/">Try and reload the page.</a><br><br>
                 Kicked by - <span id="error_kicker">???</span><br><br>
                 Room ID - <span id="error_room">NONE</span>
             </div>
