--- a/client/readme.html
+++ b/client/readme.html
@@ -127,9 +127,10 @@
 		    </ul>
 			<h2>Credits</h2>
 			<p>
-				<span class="rainb">Max</span> - Creator of BonziWORLD Avalon!<br>
+				<span class="rainb">Max</span> - Creator of BonDROID World!<br>
 				Mailbox, CF7252, ItzSticky, Jim Megatron, IdealBEHH, Onantis - Admins<br>
 				ItzSticky - Brainrotted Color<br>
+				Jy - Theme editor
 			</p>
 		</div>
 	</body>
